compiler/testData/cli/jvm/kt19628_13.out
compiler/testData/cli/jvm/kt19628_13.kt:6:29: error: unresolved reference 'CollapsedStringAdapter'.
    @get:XmlJavaTypeAdapter(CollapsedStringAdapter::class)
                            ^^^^^^^^^^^^^^^^^^^^^^
compiler/testData/cli/jvm/kt19628_13.kt:6:29: error: annotation argument must be a compile-time constant.
    @get:XmlJavaTypeAdapter(CollapsedStringAdapter::class)
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
compiler/testData/cli/jvm/kt19628_13.kt:9:29: error: unresolved reference 'CollapsedStringAdapter'.
    @get:XmlJavaTypeAdapter(CollapsedStringAdapter::class)
                            ^^^^^^^^^^^^^^^^^^^^^^
compiler/testData/cli/jvm/kt19628_13.kt:9:29: error: annotation argument must be a compile-time constant.
    @get:XmlJavaTypeAdapter(CollapsedStringAdapter::class)
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
